--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -1,6 +1,10 @@
 <view class='headtop'></view>
 <view class='headlogo'>
-  <block wx:if="{{hasUserInfo}}">
+  <block wx:if="{{!hasUserInfo && canIUse}}">
+    <image src='{{img}}nologin.png'></image>
+    <button open-type="getUserInfo" bindgetuserinfo="getUserInfo" class='logbtn'> 点击登录 </button>
+  </block>
+  <block wx:else>
     <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
     <text class="userinfo-nickname">{{userInfo.nickName}}</text>
   </block>
