--- a/pages/pusher/pusher.wxss
+++ b/pages/pusher/pusher.wxss
@@ -7,3 +7,40 @@ live-pusher {
   width: 100%;
   height: 225px;
 }
+.operate {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  right: 0;
+  left: 0;
+  bottom: 6vh;
+  width: fit-content;
+  height: 8vw;
+}
+.img-box {
+  position: relative;
+  display:inline-block;
+  height: 8vw;
+  width: 13.6vw;
+  vertical-align: middle;
+}
+
+.img-view {
+  position: relative;
+  display: block;
+  width: 8vw;
+  height: 8vw;
+  margin-left: 2.8vw;
+}
+.img-view:active{
+  opacity: 0.55
+}
+
+.text-view {
+  position: relative;
+  display: block;
+  color: #ffffff;
+  width: 100%;
+  font-size:10px;
+  text-align: center;
+} 
