--- a/pages/player/player.wxss
+++ b/pages/player/player.wxss
@@ -79,3 +79,32 @@ live-player {
 .comment-container .btn-send::after{
   border: none;
 }
+.live-follow{
+  position: absolute;top: 0;padding: 20rpx 30rpx;overflow: hidden;width: 100%;
+  color: #fff;box-sizing: border-box;z-index: 999;
+}
+.follow-left{
+  float: left;
+}
+.follow-left image{
+  float: left;width: 90rpx;height: 90rpx;
+  border-radius: 50%;margin-right: 20rpx;
+}
+.follow-left view{
+  float: left;
+}
+.follow-left view text{
+  display: block;font-size: 32rpx;width: 65%;
+}
+.follow-left view text:nth-child(1){
+  font-weight: bold;
+} 
+.follow-right{
+  float: right;line-height: 1;
+}
+.follow-right view{
+  background: #ff6666;padding: 15rpx 30rpx;border-radius: 20rpx;margin: 20rox 0;
+}
+
+
+
