--- a/pages/player/player.wxml
+++ b/pages/player/player.wxml
@@ -1,3 +1,4 @@
+<block wx:if='{{collect_status !== null && id}}'>
 <view class="page-body">
   <view class="page-section tc">
     <view class='live-follow'>
@@ -8,8 +9,8 @@
           <text>直播介绍或者直播间名称</text>
         </view>
       </view>
-      <view class='follow-right'>
-        <view>+关注</view>
+      <view class='follow-right' bindtap='{{collect_status ? "collect_cancel" : "collect"}}'>
+        <view>{{collect_status ? '已关注' : '+关注'}}</view>
       </view>
     </view>
     <live-player
@@ -61,3 +62,6 @@
       <button class="btn-send" bindtap="bindSendDanmu">发送弹幕</button>
     </view>   
   </view>
+</block>
+
+  
