--- a/pages/pusher/pusher.wxml
+++ b/pages/pusher/pusher.wxml
@@ -16,8 +16,8 @@
      device-position="{{setting.device_position}}" 
      background-mute="{{setting.background_mute}}"
      autopush
-     style="width:100%;height:100%; position:absolute;"
-     />
+     style="width:100%;height:100%; position:absolute;z-index:1;" />
+
       <cover-view class="operate">
         <cover-view wx:if="{{show}}" class='img-box'>
           <cover-image class='img-view' src='{{img}}camera.png' bindtap="switchCamera"></cover-image>
