--- a/pages/collect/collect.wxml
+++ b/pages/collect/collect.wxml
@@ -8,7 +8,7 @@
 
   <view class='topTabSwiper'>
     <view class='tab  {{currentData == 0 ? "tabBorer" : ""}}'  data-current = "0" bindtap='checkCurrent'>关注</view>
-    <view class='tab  {{currentData == 1 ? "tabBorer" : ""}}'  data-current = "1" bindtap='checkCurrent'>通知</view>
+    <view class='tab  {{currentData == 1 ? "tabBorer" : ""}}'  data-current = "1" bindtap='checkCurrent'>足迹</view>
   </view>
 <swiper current="{{currentData}}" class='swiper' style="height:600px;" duration="300" bindchange="bindchange">
   <swiper-item>
@@ -18,7 +18,7 @@
         <view class='hezi1'>
           <image src='{{item.avatarUrl}}'></image>
         </view>
-        <view class='wenzi1'>{{item.nickName}}  </view>
+        <view class='wenzi1'>{{item.nickName}}</view>
         <view class='wenzi11'>{{item.roomName}}</view>
       </navigator>
       </view>
@@ -26,21 +26,16 @@
   </swiper-item> 
   <swiper-item>
     <view class='swiper_con'>
-      <view  class='tm2'>
-        <view class='hezi2'></view>
-        <view class='wenzi2'>系统用户</view>
-        <view class='wenzi22'>孩子们最爱的辫子姐姐、儿童文学作家郁雨君...</view>
+
+      <view  wx:for='{{history_list}}' class='tm2'>
+      <navigator url='../player/player?id={{item.room_openId}}'>
+        <view class='hezi2'><image src='{{item.avatarUrl}}'></image></view>
+        <view class='wenzi2'>{{item.nickName}}</view>
+        <view class='wenzi22'>{{item.roomName}}</view>
+        <view class='wenzi22'>{{item.edittime}}</view>
+      </navigator>
       </view>
-      <view  class='tm2'>
-        <view class='hezi2'></view>
-        <view class='wenzi2'>系统用户</view>
-        <view class='wenzi22'>孩子们最爱的辫子姐姐、儿童文学作家郁雨君...</view>
-      </view>
-      <view  class='tm2'>
-        <view class='hezi2'></view>
-        <view class='wenzi2'>系统用户</view>
-        <view class='wenzi22'>孩子们最爱的辫子姐姐、儿童文学作家郁雨君...</view>
-      </view>
+
     </view>
   </swiper-item>
 </swiper>
