--- a/pages/pusher/pusher.wxml
+++ b/pages/pusher/pusher.wxml
@@ -16,32 +16,33 @@
      device-position="{{setting.device_position}}" 
      background-mute="{{setting.background_mute}}"
      autopush
-     style="width:100%;height:100%; position:absolute;z-index:1;" />
+     style="width:100%;height:100%; position:absolute;">
 
-      <cover-view class="operate">
-        <cover-view wx:if="{{show}}" class='img-box'>
-          <cover-image class='img-view' src='{{img}}camera.png' bindtap="switchCamera"></cover-image>
-          <cover-view class='text-view'>翻转</cover-view>
-        </cover-view>
-        <cover-view wx:if="{{show}}" class='img-box'>
-          <cover-image class='img-view' src='{{img}}{{beauty > 0? "beauty" : "beauty-dis"}}.png' bindtap="toggleBeauty"></cover-image>
-          <cover-view class='text-view'>美颜</cover-view>
-        </cover-view>
-        <cover-view class='img-box'>
-          <cover-image class='img-view' src='{{img}}{{muted ? "mic-dis" : "mic"}}.png' bindtap="toggleMuted"></cover-image>
-           <cover-view class='text-view'>声音</cover-view>
-        </cover-view> 
+    <cover-view class="operate">
+      <cover-view wx:if="{{show}}" class='img-box'>
+        <cover-image class='img-view' src='{{img}}camera.png' bindtap="switchCamera"></cover-image>
+        <cover-view class='text-view'>翻转</cover-view>
+      </cover-view>
+      <cover-view wx:if="{{show}}" class='img-box'>
+        <cover-image class='img-view' src='{{img}}{{beauty > 0? "beauty" : "beauty-dis"}}.png' bindtap="toggleBeauty"></cover-image>
+        <cover-view class='text-view'>美颜</cover-view>
+      </cover-view>
+      <cover-view class='img-box'>
+        <cover-image class='img-view' src='{{img}}{{muted ? "mic-dis" : "mic"}}.png' bindtap="toggleMuted"></cover-image>
+        <cover-view class='text-view'>声音</cover-view>
+      </cover-view> 
         <!-- <cover-view class='img-box'>
           <cover-image class='img-view' src='{{img}}{{debug? "log" : "log2"}}.png' bindtap="toggleDebug"></cover-image>
           <cover-view class='text-view'>日志</cover-view> 
         </cover-view>-->
-        <cover-view class='img-box'>
-          <navigator url='../setRoom/setRoom?id={{item.openId}}'>
-            <cover-image class='img-view' src='../../img/push_qr.png'></cover-image>
-            <cover-view class='text-view'>设置</cover-view> 
-          </navigator>
-        </cover-view>
+      <cover-view class='img-box'>
+        <navigator url='../setRoom/setRoom?id={{item.openId}}'>
+        <cover-image class='img-view' src='../../img/push_qr.png'></cover-image>
+        <cover-view class='text-view'>设置</cover-view> 
+        </navigator>
       </cover-view>
+    </cover-view>
+    </live-pusher>
     <view class="btn-area" style="display:none;">
       <button bindtap="bindStart" class="page-body-button" type="primary">播放推流</button>
       <button bindtap="bindPause" class="page-body-button" type="primary">暂停推流</button>
