--- a/pages/player/player.wxss
+++ b/pages/player/player.wxss
@@ -9,8 +9,7 @@ live-player {
   width: 100%;
   height: 225px;
 }
-.bottom_box
-{
+.bottom_box{
   position: relative;
   width: 30px; 
   height: 50px; 
@@ -19,21 +18,18 @@ live-player {
   display:inline-block;
 }
 
-.bottom_button
-{
+.bottom_button{
   display:inline-block;
   position: absolute;
   width: 30px; 
   height: 30px; 
 }
 
-.bottom_button :active
-{
+.bottom_button :active{
   opacity: 0.55
 }
 
-.bottom_text
-{
+.bottom_text{
   position: absolute;
   display:inline-block;
   color: #ffffff;
@@ -80,30 +76,30 @@ live-player {
   border: none;
 }
 .live-follow{
-  position: absolute;top: 0;padding: 20rpx 30rpx;overflow: hidden;width: 100%;
+  position: absolute;top: 0;padding: 20rpx 20rpx;overflow: hidden;width: 100%;
   color: #fff;box-sizing: border-box;z-index: 999;
 }
 .follow-left{
-  float: left;
+  float: left;width: 76%;
 }
-.follow-left image{
+.follow-left cover-image{
   float: left;width: 90rpx;height: 90rpx;
   border-radius: 50%;margin-right: 20rpx;
 }
-.follow-left view{
+.follow-left cover-view{
   float: left;
 }
-.follow-left view text{
-  display: block;font-size: 32rpx;width: 65%;
+.follow-left cover-view cover-view{
+  display: block;font-size: 28rpx;width: 65%;
 }
-.follow-left view text:nth-child(1){
-  font-weight: bold;
+.follow-left cover-view cover-view:nth-child(1){
+  font-weight: bold;margin: 10rpx 0;
 } 
 .follow-right{
-  float: right;line-height: 1;
+  float: right;width: 20%;
 }
-.follow-right view{
-  background: #ff6666;padding: 15rpx 30rpx;border-radius: 20rpx;margin: 20rox 0;
+.follow-right cover-view{
+  background: #ff6666;padding: 10rpx 30rpx;border-radius: 30rpx;margin: 20rpx 0;font-size: 28rpx;
 }
 
 
