--- a/pages/pusher/pusher.wxml
+++ b/pages/pusher/pusher.wxml
@@ -35,7 +35,7 @@
           <cover-image class='img-view' src='{{img}}{{debug? "log" : "log2"}}.png' bindtap="toggleDebug"></cover-image>
           <cover-view class='text-view'>日志</cover-view> 
         </cover-view>-->
-      <cover-view class='img-box'>
+      <cover-view class='img-box' bindtap='navigateTo'>
         <!-- <navigator url='../setRoom/setRoom?id={{item.openId}}'> -->
         <cover-image class='img-view' src='../../img/push_qr.png'></cover-image>
         <cover-view class='text-view'>设置</cover-view> 
