--- a/pages/pusher/pusher.wxml
+++ b/pages/pusher/pusher.wxml
@@ -13,7 +13,7 @@
      whiteness="{{setting.whiteness}}" 
      aspect="{{setting.aspect}}" 
      zoom="{{setting.zoom}}" 
-     device-position="{{device_position?device_position:setting.device_position}}" 
+     device-position="{{setting.device_position}}" 
      background-mute="{{setting.background_mute}}"
      autopush
      style="width:100%;height:100%; position:absolute;">
@@ -35,7 +35,7 @@
           <cover-image class='img-view' src='{{img}}{{debug? "log" : "log2"}}.png' bindtap="toggleDebug"></cover-image>
           <cover-view class='text-view'>日志</cover-view> 
         </cover-view>-->
-      <cover-view class='img-box' bindtap='navigateTo' data-ids='{{itme.openId}}'>
+      <cover-view class='img-box' bindtap='move'>
         <!-- <navigator url='../setRoom/setRoom?id={{item.openId}}'> -->
         <cover-image class='img-view' src='../../img/push_qr.png'></cover-image>
         <cover-view class='text-view'>设置</cover-view> 
