--- a/pages/player/player.wxml
+++ b/pages/player/player.wxml
@@ -20,10 +20,10 @@
      
     <cover-view class='live-follow'>
       <cover-view class='follow-left'>
-        <cover-image src='{{userInfo.avatarUrl}}'></cover-image>
+        <cover-image src='{{item.avatarUrl}}'></cover-image>
         <cover-view>
-          <cover-view>直播名称</cover-view>
-          <cover-view>直播介绍或者直播间名称</cover-view>
+          <cover-view>{{item.nickName}}</cover-view>
+          <cover-view>{{item.roomName}}</cover-view>
         </cover-view>
       </cover-view>
       <cover-view class='follow-right' bindtap='{{collect_status ? "collect_cancel" : "collect"}}'>
