--- a/pages/collect/collect.wxss
+++ b/pages/collect/collect.wxss
@@ -7,10 +7,10 @@
 .contact{
   width:100%;overflow: hidden;
 }
-.tab{float: left; width: 50%;text-align: center;padding: 10rpx 0; }
-.topTabSwiper{border-top: 1rpx solid #ccc; border-bottom: 1rpx solid #ccc; zoom: 1;}
+.tab{float: left; width: 50%;text-align: center;padding: 10rpx 0;font-size: 32rpx;font-weight: bold; }
+.topTabSwiper{ border-bottom: 1rpx solid #ccc; zoom: 1;margin-top: 20rpx;}
 .topTabSwiper:after{content: ""; clear: both;display: block;}
-.tabBorer{border-bottom: 3rpx solid orange; color: orange;}
+.tabBorer{border-bottom: 6rpx solid orange; color: orange;}
 .swiper{width: 100%;}
 .swiper_con{ width: 100%; height: 100%; overflow: hidden;padding: 0 10rpx;box-sizing: border-box;}
 
@@ -57,14 +57,9 @@ margin-top:26rpx;
 
 .wenzi2{
  margin-top: 30rpx;
- margin-left: 26rpx;
+ margin-left: 26rpx;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;
  font-size: 32rpx;float: left;
 }
-.wenzi22{
-  margin-top: 10rpx;
- margin-left: 26rpx;
- font-size: 26rpx;float: left;
- color: #5e5e5e;
+.wztop{
+  white-space: nowrap;overflow: hidden;text-overflow: ellipsis;
 }
-
-
