--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -6,8 +6,9 @@
   </block>
 </view>
 <view class='mymsg'>
-  <view class='bcom'><text bindtap='gotozb'>成为主播</text> <view> > </view> </view>
-  <view class='rcord'>浏览记录</view>
+  <view class='bcom' bindtap='gotozb'><text>我的直播间</text> <view> > </view> </view>
+  <view class='bcom'><navigator url='../setRoom/setRoom?id={{item.openId}}'><text>直播设置</text> <view> > </view> </navigator></view>
+  <!-- <view class='rcord'>浏览记录</view>
   <view class='rclist'>
-  </view>
+  </view> -->
 </view>
