--- a/pages/5/5.wxss
+++ b/pages/5/5.wxss
@@ -2,26 +2,23 @@
   overflow: hidden;
 }
 .showdetail{
-  float: left;width: 48%;overflow: hidden;margin-bottom: 10rpx;
+  float: left;width: 48%;overflow: hidden;margin-bottom: 10rpx;font-size: 28rpx;
 }
 .showdetail:nth-child(even){
   float: right;
 }
-.showdetail view{
-  position: relative;font-size: 28rpx;
+.showdetail .contant{
+  position: relative;overflow: hidden;height: 240rpx;border: 1rpx solid #ddd;
 }
 .showdetail view image{
-  width: 100%;height: 240rpx;
+  width: 100%;height: 100%;
 }
 .showdetail view text{
   position: absolute;left: 0;
-  bottom: 0;z-index: 9;
+  bottom: 2rpx;z-index: 9;background: rgba(0, 0, 0, 0.4);
+  width:100%;display:block;color: #fff;overflow: hidden;white-space: nowrap;text-overflow: ellipsis;
 }
 .introduce{
   white-space: nowrap;overflow: hidden;text-overflow: ellipsis;width: 100%;
 }
-
-
-
-
 
