--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,5 +1,5 @@
 <!--index.wxml-->
-<view class='container'>
+<view class='container' wx:if='{{loading}}'>
 <!--<view class='main serch'>
   <view class='search'>
     <input type='text' placeholder='搜索课程或讲师'id='sousuo'></input>
@@ -16,7 +16,7 @@
     <navigator url='../5/5' class='jy-tit-m'>更多></navigator>
   </view>
   <view class='bt-list'>
-    <view class='bt-det' wx:key="*this" wx:for="{{startTimeList}}">
+    <view class='bt-det' wx:key="*this" wx:for="{{allList.startTimeList}}">
       <navigator url='../player/player?id={{item.openId}}'>
         <view class='bt-img'>
           <image src="{{item.avatarUrl}}"></image>
@@ -38,7 +38,7 @@
     <navigator url='../5/5' class='jy-tit-m'>更多></navigator>
   </view>
   <view class='bt-list'>
-    <view class='rm-det' wx:key="*this" wx:for="{{hotList}}">
+    <view class='rm-det' wx:key="*this" wx:for="{{allList.hotList}}">
       <navigator url='../player/player?id={{item.openId}}'>
         <image class='rm-img' src='{{item.avatarUrl}}'></image>
         <text class='rm-txt-tit'>{{item.nickName}}</text>
@@ -53,7 +53,7 @@
     <navigator url='../5/5' class='jy-tit-m'>更多></navigator>
   </view>
   <view class='bt-list'>
-    <view class='zj-det' wx:key="*this" wx:for="{{newList}}">
+    <view class='zj-det' wx:key="*this" wx:for="{{allList.newList}}">
       <navigator url='../player/player?id={{item.openId}}'>
         <image class='zj-img' src='{{item.avatarUrl}}'></image>
         <text class='zj-txt-name'>{{item.nickName}}</text>
@@ -62,4 +62,5 @@
     </view>
   </view>
 </view>
+
 </view>
